# derive-generic-visitor

./: .cargo-rdme.toml  CHANGELOG.md  Cargo.toml  README.md  release.toml
derive_generic_visitor/: Cargo.toml  build.rs
derive_generic_visitor/src/: basic_impls.rs  lib.rs
derive_generic_visitor/tests/: drive_two.rs  group.rs  simple.rs  visit_two.rs  visitable_group.rs
derive_generic_visitor_macros/: Cargo.toml
derive_generic_visitor_macros/src/: common.rs  drive.rs  lib.rs  visit.rs  visitable_group.rs
